# CMakeTemplate

./: .gitignore
cpp/: CMakeLists.txt  cmakeAllBuild.bat
cpp/src/Application/: CMakeLists.txt  main.cc  sources.cmake
cpp/src/Logger/: CMakeLists.txt  Logger.cc  Logger.h  sources.cmake
cpp/src/Util/: CMakeLists.txt  Util.cc  Util.h  sources.cmake
